--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="wrap">
-        wrap
+        wrap2
     </div>
     <script type='text/javascript' src='./js/jquery.min.js'></script>
     <script type='text/javascript' src='./js/common.js'></script>
