--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta content="telephone=no" name="format-detection">
-    <link rel="shortcut icon" href="./img/favicon.ico" title="Favicon">
-    <link rel='stylesheet' href='./css/normalize.css' type='text/css' media='all' />
-    <link rel='stylesheet' href='./css/style.css' type='text/css' media='all' />
-    <link rel='stylesheet' href='./js/swiper/swiper-4.1.6.min.css' type='text/css' media='all' />
+    <link rel="shortcut icon" href="/website/img/favicon.ico" title="Favicon">
+    <link rel='stylesheet' href='/website/css/normalize.css' type='text/css' media='all' />
+    <link rel='stylesheet' href='/website/css/style.css' type='text/css' media='all' />
+    <link rel='stylesheet' href='/website/js/swiper/swiper-4.1.6.min.css' type='text/css' media='all' />
 </head>
 
 <body>
     <div class="wrap">
-        wrap3
+        wrap4
     </div>
-    <script type='text/javascript' src='./js/jquery.min.js'></script>
-    <script type='text/javascript' src='./js/common.js'></script>
-    <script type='text/javascript' src='./js/swiper/swiper-4.1.6.min.js'></script>
-    <script type='text/javascript' src='./js/main.js'></script>
+    <script type='text/javascript' src='/website/js/jquery.min.js'></script>
+    <script type='text/javascript' src='/website/js/common.js'></script>
+    <script type='text/javascript' src='/website/js/swiper/swiper-4.1.6.min.js'></script>
+    <script type='text/javascript' src='/website/js/main.js'></script>
 </body>
 
 </html>
